# wetteronline-api

./: LICENSE  README.md  api.py  endpoint.py  setup.cfg  testfile.py
docs/source/: conf.py  index.rst  index_de.rst  install.rst  install_de.rst  quickstart.rst  quickstart_de.rst  usage_de.rst
docs/source/_build/gettext/: index.pot  install.pot  quickstart.pot  usage.pot
docs/source/_build/gettext/.doctrees/: environment.pickle  index.doctree  install.doctree  quickstart.doctree  usage.doctree
docs/source/locale/de/LC_MESSAGES/: index.po  install.po  quickstart.po
docs/source/locale/ja/LC_MESSAGES/: index.po  usage.po
docs/source/locales/de/LC_MESSAGES/: index.po  install.po  usage.po
docs/source/locales/de_DE/LC_MESSAGES/: index.po  install.po  quickstart.po  usage.po
docs/source/locales/en_US/LC_MESSAGES/: index.po  quickstart.po
src/: __init__.py
src/wetteronline/: api.py
