[metadata]
name = wetteronline
version = 0.0.3
author = Johan Gröger
author_email = johan.groeger@gmail.com
description = An (unofficial) API for wetteronline.de .
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johangroe/wetteronline-api/
project_urls =
    Bug Tracker = https://github.com/johangroe/wetteronline-api/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4>=4.11.1
    requests>=2.28.0
    lxml>=4.9.0


[options.packages.find]
where = src